Version 3.0.0 prepared to launch